--- a/aws-config.env
+++ b/aws-config.env
@@ -1,37 +1,25 @@
 # Sovereign FL 200-Node Test Configuration (Optimized for 2026)
-# Generated: $(date)
-
-# --- AWS Infrastructure Settings ---
+# Generated: Thu Feb 19 14:40:02 PST 2026
 AWS_REGION=us-east-1
-AWS_ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
-S3_BUCKET=sovereign-fl-results-${AWS_ACCOUNT_ID}
+AWS_ACCOUNT_ID=722762405531
+S3_BUCKET=sovereign-fl-results-722762405531
 KEY_NAME=sovereign-fl-key
 IAM_ROLE=SovereignFL-EC2-Role
 VPC_NAME=sovereign-fl-vpc
 
-# --- Instance Scaling Strategy ---
-# Total Nodes: 200 | Instances: 8 | Density: 25 Nodes/Host
+# AGGREGATOR: Upgraded for heavy crypto-aggregation of 200 nodes
 AGGREGATOR_INSTANCE_TYPE=c7g.4xlarge 
+
+# CLIENTS: Shifted to high-density compute to avoid vCPU limit failure
+# This setup runs ~25 Docker containers per instance (8 instances total)
 CLIENT_INSTANCE_TYPE=m7g.4xlarge
 INSTANCE_COUNT=8
 NODES_PER_INSTANCE=25
 TOTAL_NODE_COUNT=200
 
-# --- Docker & Networking Logic ---
-# Base port for the first container; increments by 1 per node
-BASE_PORT=8000
-DOCKER_IMAGE_NAME=sovereign-node:latest
+# DOCKER OPTIMIZATION
 DOCKER_MEM_LIMIT=1g
 DOCKER_CPU_RESERVATION=0.5
 
-# --- Privacy & Consensus Params ---
-# SGP-001 Standard requirements
-LOCAL_EPOCHS=3
-BATCH_SIZE=32
-PRIVACY_EPSILON=4.0
-BFT_THRESHOLD=0.67
-
-# --- Cost Control ---
+# COST SAVINGS
 USE_SPOT_INSTANCES=true
-MAX_SPOT_PRICE=0.85
-EOF
