--- a/nginx.conf
+++ b/nginx.conf
@@ -1,181 +1,24 @@
-# Nginx Load Balancer Configuration for 200-Node Test
-# Place in repository root as nginx.conf
-
-user nginx;
-worker_processes auto;
-error_log /var/log/nginx/error.log warn;
-pid /var/run/nginx.pid;
-
 events {
     worker_connections 4096;
-    use epoll;
-    multi_accept on;
 }
 
 http {
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
-
-    # Logging format
-    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-                    '$status $body_bytes_sent "$http_referer" '
-                    '"$http_user_agent" "$http_x_forwarded_for" '
-                    'rt=$request_time uct="$upstream_connect_time" '
-                    'uht="$upstream_header_time" urt="$upstream_response_time"';
-
-    access_log /var/log/nginx/access.log main;
-
-    # Performance tuning for 200 nodes
-    sendfile on;
-    tcp_nopush on;
-    tcp_nodelay on;
-    keepalive_timeout 65;
-    types_hash_max_size 2048;
-    client_max_body_size 100M;  # Allow large model updates
-
-    # Gzip compression
-    gzip on;
-    gzip_vary on;
-    gzip_proxied any;
-    gzip_comp_level 6;
-    gzip_types text/plain text/css text/xml application/json application/javascript application/rss+xml application/atom+xml image/svg+xml;
-
-    # Rate limiting zones
-    limit_req_zone $binary_remote_addr zone=api:10m rate=100r/s;
-    limit_req_zone $binary_remote_addr zone=consensus:10m rate=50r/s;
-
-    # Upstream backend servers
-    upstream backend_servers {
-        least_conn;  # Load balancing method
-        
-        server backend:5000 weight=5 max_fails=3 fail_timeout=30s;
-        server aggregator:8080 weight=5 max_fails=3 fail_timeout=30s;
-        
-        keepalive 32;
+    upstream backend {
+        server backend:5000;
+        server aggregator:8080;
     }
 
-    # Upstream for node agents (health checks)
-    upstream node_agents {
-        zone node_agents 64k;
-        
-        # These will be dynamically populated or use service discovery
-        # For Docker Compose, we use the service name which resolves to all replicas
-        server node-agent:8080 max_fails=3 fail_timeout=30s;
-        
-        keepalive 64;
-    }
-
-    # Main server block
     server {
         listen 80;
-        server_name localhost;
-        root /usr/share/nginx/html;
-        index index.html;
 
-        # Health check endpoint
-        location /nginx-health {
-            access_log off;
-            return 200 "healthy\n";
-            add_header Content-Type text/plain;
-        }
-
-        # Backend API proxy
-        location /api/ {
-            limit_req zone=api burst=200 nodelay;
-            
-            proxy_pass http://backend_servers/;
-            proxy_http_version 1.1;
-            
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Connection "";
-            
-            proxy_connect_timeout 30s;
-            proxy_send_timeout 30s;
-            proxy_read_timeout 30s;
-            
-            proxy_buffering on;
-            proxy_buffer_size 4k;
-            proxy_buffers 8 4k;
-        }
-
-        # Consensus endpoint (stricter rate limiting)
-        location /api/consensus/ {
-            limit_req zone=consensus burst=50 nodelay;
-            
-            proxy_pass http://backend_servers/api/consensus/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header Connection "";
-            
-            proxy_connect_timeout 60s;
-            proxy_send_timeout 60s;
-            proxy_read_timeout 60s;
-        }
-
-        # Node agent communication
-        location /node/ {
-            proxy_pass http://node_agents/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header Connection "";
-            
-            # Longer timeouts for FL training
-            proxy_connect_timeout 300s;
-            proxy_send_timeout 300s;
-            proxy_read_timeout 300s;
-        }
-
-        # WebSocket support for real-time updates
-        location /ws/ {
-            proxy_pass http://backend_servers/;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            
-            proxy_read_timeout 86400s;
-            proxy_send_timeout 86400s;
-        }
-
-        # Prometheus metrics endpoint
-        location /metrics {
-            proxy_pass http://prometheus:9090/metrics;
-            allow 172.20.0.0/16;  # Only allow from Docker network
-            deny all;
-        }
-
-        # Grafana proxy
-        location /grafana/ {
-            proxy_pass http://grafana:3000/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-        }
-
-        # Static files
         location / {
-            try_files $uri $uri/ =404;
+            proxy_pass http://backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
         }
 
-        # Error pages
-        error_page 500 502 503 504 /50x.html;
-        location = /50x.html {
-            root /usr/share/nginx/html;
-        }
-    }
-
-    # Status page for monitoring
-    server {
-        listen 8080;
-        server_name localhost;
-        
-        location /nginx_status {
-            stub_status on;
+        location /metrics {
+            proxy_pass http://prometheus:9090;
             allow 172.20.0.0/16;
             deny all;
         }
