--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,26 +1,18 @@
-# Stage 1: Build the React application
+# Stage 1: Build
 FROM node:20-alpine AS build
-
 WORKDIR /app
-
-# 1. Copy package files from the frontend subdirectory
 COPY frontend/package*.json ./
 RUN npm install
-
-# 2. Copy the rest of the frontend source code and build
 COPY frontend/ ./
 RUN npm run build
 
-# Stage 2: Serve with Nginx
+# Stage 2: Serve
 FROM nginx:stable-alpine
+# Add curl so the Docker Healthcheck works
+RUN apk add --no-cache curl 
 
-# Copy the build output from Stage 1
-# Vite defaults to the 'dist' folder
 COPY --from=build /app/dist /usr/share/nginx/html
-
-# Copy custom Nginx config to handle React Router and API proxying
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
-
 CMD ["nginx", "-g", "daemon off;"]
