--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,8 @@
 services:
   frontend:
+    image: frontend:latest
+    ports:
+      - "3000:80"
     build:
       context: .
       dockerfile: Dockerfile.frontend
