docs: archive 200-node federated audit results and update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,13 @@ wheels/
 .DS_Store
 Thumbs.db
 *.pem
+
+# Sovereign Map Audit Results
+results-*/
+test-results/
+*.tar.gz
+*.pth
+*.log
+node_modules/
+dist/
+.env
