--- a/docker-compose.200nodes.yml
+++ b/docker-compose.200nodes.yml
@@ -17,7 +17,7 @@ services:
   backend:
     build:
       context: .
-      dockerfile: Dockerfile.backend
+      dockerfile: dockerfile: Dockerfile
     container_name: backend-200
     ports:
       - "8080:8080"
