fix: add S3_BACKEND_BUCKET to aws-config.env for Phase 2
Add missing S3_BACKEND_BUCKET configuration variable that Phase 2 now uses
to dynamically configure Terraform backend. This aligns with the actual
bucket name used in terraform/main.tf (sovereign-map-terraform-state).

--- a/aws-config.env
+++ b/aws-config.env
@@ -3,6 +3,12 @@
 AWS_REGION=us-east-1
 AWS_ACCOUNT_ID=722762405531
 S3_BUCKET=sovereign-fl-results-722762405531
+
+# TERRAFORM BACKEND
+# Must match the bucket name in terraform/main.tf
+S3_BACKEND_BUCKET=sovereign-map-terraform-state
+
+# EC2 CONFIGURATION
 KEY_NAME=sovereign-fl-key
 IAM_ROLE=SovereignFL-EC2-Role
 VPC_NAME=sovereign-fl-vpc
@@ -14,8 +20,13 @@ AGGREGATOR_INSTANCE_TYPE=c7g.4xlarge
 # This setup runs ~25 Docker containers per instance (8 instances total)
 CLIENT_INSTANCE_TYPE=m7g.4xlarge
 INSTANCE_COUNT=8
+NODE_COUNT=8
 NODES_PER_INSTANCE=25
 TOTAL_NODE_COUNT=200
+
+# ASG AND CONTAINER DISCOVERY (Phase 5)
+ASG_NAME=sovereign-fl-clients
+CONTAINER_LABEL=project=sovereign-map
 
 # DOCKER OPTIMIZATION
 DOCKER_MEM_LIMIT=1g
