--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -27,9 +27,10 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push
+      - name: Build (no push yet)
         uses: docker/build-push-action@v6
         with:
           context: .
-          push: true
-          tags: ghcr.io/rwilliamspbg/sovereign_map_federated_learning:latest
+          push: false
+          tags: ghcr.io/rwilliamspbg-ops/sovereign_map_federated_learning:latest
+
